Squashed commit of the following:
commit 6c01bd0891e1f440d4b2d8bd58a3602b646a18bf
Author: huxuan <i@huxuan.org>
Date:   Fri Jan 3 14:12:57 2020 +0800

    More robust udpxy.

commit 438f8499c80880ec1fa4feab069532285be52997
Author: huxuan <i@huxuan.org>
Date:   Fri Jan 3 14:10:21 2020 +0800

    Better version.

commit 123de083a3a24ead86697f0730b9220c7ace8712
Author: huxuan <i@huxuan.org>
Date:   Fri Jan 3 13:33:58 2020 +0800

    Change filter to unify.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "id_filters": {
+    "id_unifiers": {
         "-": "",
         "IPTV": "",
         "BTV冬奥纪实": "北京纪实",
@@ -11,7 +11,7 @@
         "CETV4": "中国教育4台",
         "纪实频道": "上海纪实"
     },
-    "title_filters": {
+    "title_unifiers": {
         "高清": "",
         "HD": "",
         "＋": "+"
