--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "id_unifiers": {
         "-": "",
         "IPTV": "",
-        "BTV冬奥纪实": "北京纪实",
+        "北京纪实": "BTV冬奥纪实",
         "BTV北京卫视": "北京卫视",
-        "BTV卡酷少儿": "卡酷动画",
+        "卡酷动画": "BTV卡酷少儿",
         "CETV1": "中国教育1台",
         "CETV2": "中国教育2台",
         "CETV3": "中国教育3台",
@@ -12,8 +12,19 @@
         "纪实频道": "上海纪实"
     },
     "title_unifiers": {
-        "高清": "",
+        "4K超清": "北京IPTV 4K超清",
+        "CETV4": "中国教育4台",
+        "DOGTV": "北京IPTV 萌宠TV",
         "HD": "",
+        "北京冬奥纪实": "BTV冬奥纪实",
+        "卡酷动画": "BTV卡酷少儿",
+        "收视指南": "IPTV收视指南",
+        "淘Baby": "北京IPTV 淘Baby",
+        "淘剧场": "北京IPTV 淘剧场",
+        "淘娱乐": "北京IPTV 淘娱乐",
+        "淘电影": "北京IPTV 淘电影",
+        "电视台": "",
+        "高清": "",
         "＋": "+"
     }
 }
