Modify self-maintained config.

--- a/config.json
+++ b/config.json
@@ -13,12 +13,12 @@
     },
     "title_unifiers": {
         "4K超清": "北京IPTV 4K超清",
+        "BTV冬奥纪实4K": "BTV冬奥纪实",
+        "BTV冬奥纪实HDR": "BTV冬奥纪实",
         "CETV4": "中国教育4台",
         "DOGTV": "北京IPTV 萌宠TV",
         "HD": "",
-        "北京冬奥纪实": "BTV冬奥纪实",
         "卡酷动画": "BTV卡酷少儿",
-        "收视指南": "IPTV收视指南",
         "淘Baby": "北京IPTV 淘Baby",
         "淘剧场": "北京IPTV 淘剧场",
         "淘娱乐": "北京IPTV 淘娱乐",
