--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ name = "iptvtools"
 description = "A set of scripts that help to better IPTV experience."
 readme = "README.md"
 keywords = [
-    "filter",
+    "iptv-filter",
     "iptvtools",
     "m3u",
     "serious-scaffold",
@@ -19,7 +19,7 @@ license = { text = "MIT" }
 authors = [
     { email = "i@huxuan.org", name = "huxuan" },
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
@@ -27,7 +27,6 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
